test_files/s_cproc/include/test_001/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_001/i.input:1:9: error: #include expects "FILENAME" or <FILENAME>
 #include/"include.input"
         ^
